--- a/01-html/01-links.html
+++ b/01-html/01-links.html
@@ -8,27 +8,30 @@
 <body>
     <h1>Links</h1>
 
-    <h2 id="global-urls">Global URLs</h2>
-    
-    <a href="https://www.google.de/" title="Let's go to Google">Google</a>
-    <p></p>
-    <a href="https://www.google.com/search?q=something&oq=something&aqs=chrome..69i57j46j46i433j46j0j46l2j0i433.1423j0j7&sourceid=chrome&ie=UTF-8">Something</a>
-    <p></p>
-    <a href="http://localhost:5500/01-html/00-basic-tags.html">Basic tags with absolute path</a>
+    <section>
+        <h2 id="global-urls">Global URLs</h2>
+        
+        <a href="https://www.google.de/" title="Let's go to Google">Google</a>
+        <p></p>
+        <a href="https://www.google.com/search?q=something&oq=something&aqs=chrome..69i57j46j46i433j46j0j46l2j0i433.1423j0j7&sourceid=chrome&ie=UTF-8">Something</a>
+        <p></p>
+        <a href="http://localhost:5500/01-html/00-basic-tags.html">Basic tags with absolute path</a>
+    </section>
 
+    <section>
+        <h2>Relative URLs</h2>                          
 
-    <h2>Relative URLs</h2>
+        <a href="00-basic-tags.html">Basic tags relative path</a>
+        <a href="./00-basic-tags.html">Basic tags relative path</a>
+        <a href="../00-crash course/index.html">Crash course</a>
 
-    <a href="00-basic-tags.html">Basic tags relative path</a>
-    <a href="./00-basic-tags.html">Basic tags relative path</a>
-    <a href="../00-crash course/index.html">Crash course</a>
+        <a href="#global-urls">Global URLs</a>
 
-    <a href="#global-urls">Global URLs</a>
+        <a href="/01-html/00-basic-tags.html">Absolute way</a>
+        <a href="/00-crash course/index.html">Crash course - absolute way</a>
 
-    <a href="/01-html/00-basic-tags.html">Absolute way</a>
-    <a href="/00-crash course/index.html">Crash course - absolute way</a>
-
-    <img src="../00-crash course/IC.jpg">
+        <img src="../00-crash course/IC.jpg">                                                                                               
+    </section>
 
 </body>
 </html>
