Explain advanced concepts on CSS

--- a/02-css-base/index.html
+++ b/02-css-base/index.html
@@ -15,8 +15,47 @@
     </header>
 
     <main>
-        <p>Hello world!</p>
+        <p>Hello world! CSS is <strong>great</strong>.</p>
+
+        <p id="special-paragraph">I'm special</p>
+
+        <p class="normargin middle">No margin</p> <!--Hier hat der Paragraph zwei classes, nämlich normargin und middle-->
+
+        <p class="normargin" id="special-paragraph">No margin either</p> <!--Hat beides, class und ID, aber keine zwei Elemente sollten dieselbe ID haben!-->
+
+        <a href="https://www.google.de/">This goes to Google</a>
+
+        <p><span>I'm a span</span> while I'm not</p>
+
     </main>
+
+    <table>
+
+        <tr>
+            <th>Role</th>
+            <th>Actor/Actress</th>
+            <th>Gender</th>
+        </tr>
+
+        <tr>
+            <td>Dom Toretto</td>
+            <td>Vin Diesel</td>
+            <td>m</td>
+        </tr>
+
+        <tr>
+            <td>Brian O'Connor</td>
+            <td>Paul Walker</td>
+            <td>m</td>
+        </tr>
+
+        <tr>
+            <td>Mia Toretto</td>
+            <td>Jordana Brewster</td>
+            <td>f</td>
+        </tr>
+
+    </table>
 
     <footer>
         &copy; 2020 Inglorious Coderz
